--- a/src/partials/header.pug
+++ b/src/partials/header.pug
@@ -3,7 +3,7 @@ header.page-header
     a.main-nav__list.page-header__logo
       .logo
         svg.logo__pic
-          use(href='../pics/icons/logo.svg')
+          use(xlink:href='./spritemap.svg#sprite-logo')
         h1.page-header__title.logo__title E-shop
     ul.main-nav__list.site-list
       li.site-list__item
@@ -17,12 +17,12 @@ header.page-header
         form.page-header__search(action='' autocomplete='off')
           input.search-input(type='search')
           svg
-            use(href='../pics/icons/search.svg')
+            use(xlink:href='./spritemap.svg#sprite-search')
       li.user-list__item
         a(href='#')
           svg
-            use(href='../pics/icons/cart.svg')
+            use(xlink:href='./spritemap.svg#sprite-cart')
       li.user-list__item
         a(href='#')
           svg
-            use(href='../pics/icons/account.svg')
+            use(xlink:href='./spritemap.svg#sprite-account')
