--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -78,13 +78,13 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 10px;
+  padding: 30px 10px 10px;
   margin: auto;
 }
 
 .section-name {
   margin: 0;
-  padding-bottom: 60px;
+  padding-bottom: 30px;
   font-size: 28px;
   font-weight: 300;
   text-align: center;
@@ -116,6 +116,28 @@ a {
   }
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0px 1000px #fff inset;
+  -webkit-text-fill-color: #000;
+}
+
 .input--wide {
   width: 100%;
+}
+
+input[type="checkbox"] {
+  width: 17px;
+  height: 17px;
+}
+
+.checkbox-wr {
+  display: flex;
 }
