--- a/src/pages/signup.pug
+++ b/src/pages/signup.pug
@@ -2,41 +2,45 @@ doctype html
 head
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
-  title Login
+  title Sign Up
+  link(href='../assets/styles/main.scss' rel='stylesheet')
   link(href='https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap' rel='stylesheet')
 
 body
   include ../partials/header.pug
   .aligned-narrow
     .auth-content
-      h2.section-name Log in
+      h2.section-name Create an account and discover the benefits
       p.auth-text
         | Lorem Ipsum is simply dummy text of the printing
         | and typesetting industry. Lorem Ipsum has been the industry&apos;s standard dummy text ever since the 1500s
       .auth-form
         form(action='')
           .form_field
+            input#login.input.input--wide.auth-form_input(type='text' placeholder='First Name')
+          .form_field
+            input#login.input.input--wide.auth-form_input(type='text' placeholder='Last Name')
+          .form_field
             input#login.input.input--wide.auth-form_input(type='text' placeholder='E-mail')
           .form_field
             input#password.input.input--wide.auth-form_input(type='text' placeholder='Password')
           .form_field
-            div
+            .checkbox-wr
               input#rememberme(type='checkbox' name='forgot-password')
-              label(for='rememberme') Keep me signed in
-            a.auth_link(href='#') Forgot password?
+              label(for='rememberme') I agree to  
+                a.auth_link(href='#') the Google Terms of Service and Privacy Policy
           .form_buttons.auth-socials
             a.auth-socials_link.auth-socials_link--facebook.button(href='')
               svg
-                use(href='../pics/icons/facebook.svg')
+                use(xlink:href='./spritemap.svg#sprite-facebook')
               | Facebook
             a.auth-socials_link.auth-socials_link--google.button(href='')
               svg
-                use(href='../pics/icons/gmail.svg')
+                use(xlink:href='./spritemap.svg#sprite-gmail')
               | Gmail
           .form_buttons
-            button.button.button--wide.login_button(href='#' type='submit') Sign in
+            button.button.button--wide.login_button(href='#' type='submit') Sign up
           .form_field.form_field--centryfied
             span
-              | Not a member yet?
-              a.auth_link(href='#') Sign up
-  script(src='../scripts/index.js')
+              a.auth_link(href='#') Are you already a member?
+  //- script(src='../scripts/index.js')
