--- a/src/assets/styles/components/login.scss
+++ b/src/assets/styles/components/login.scss
@@ -60,3 +60,38 @@
   margin-left: 10px;
   font-weight: 500;
 }
+
+hr {
+  position: relative;
+  height: 1px;
+}
+
+hr {
+  border: none;
+  height: 30px;
+
+  &:before {
+    content: attr(data-divide);
+    position: absolute;
+    position: absolute;
+    top: calc(50% - 10px);
+    left: calc(50% - 65px);
+    width: 130px;
+    text-transform: uppercase;
+    text-align: center;
+    z-index: 2;
+    text-transform: uppercase;
+    color: var(--c-lightgray150);
+    background: var(--c-white);
+  }
+
+  &:after {
+    content: "";
+    width: 100%;
+    height: 1px;
+    top: calc(50% - 0.5px);
+    position: absolute;
+    left: 0;
+    background: var(--c-lightgray150);
+  }
+}
