added page product

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -10,6 +10,7 @@
     --c-mediumgray90: #cecece;
     --c-mediumgray50: #d1d1d1;
     --c-blue: #2900ff;
+    --c-darkgray200: #474747;
     --c-darkgray150: #808080;
     --c-darkgray100: #aeaeae;
     --c-wheat: #fff3df;
