--- a/src/assets/styles/imports.scss
+++ b/src/assets/styles/imports.scss
@@ -7,3 +7,6 @@
 @import "components/hot-products.scss";
 @import "components/footer.scss";
 @import "components/login.scss";
+@import "components/product-view.scss";
+@import "components/product-rating.scss";
+@import "components/product-description.scss"
