--- a/src/pages/reset-password.pug
+++ b/src/pages/reset-password.pug
@@ -17,7 +17,7 @@ body
             input#login.input.input--wide.auth-form_input(type='text' placeholder='E-mail')
           hr(data-divide="Or")
           .form_field
-            input#login.input.input--wide.auth-form_input(type='tel' pattern="[+]{1}[0-9]{11,14}" placeholder='Phone number')
+            input#phone.input.input--wide.auth-form_input(type='tel' value='+447733312345')
           .form_buttons
             button.button.button--wide.login_button(href='#' type='submit') Reset
           .form_field.form_field--centryfied
