--- a/src/partials/hot-products.pug
+++ b/src/partials/hot-products.pug
@@ -3,22 +3,22 @@ h2.section-name Products in today
   .hot-products_list
     a.hot-products_item.product_card(href='')
       img.product_pic(src='../pics/main-page_slider/BasicSlimTShirt.png' alt='Basic Slim T-Shirt')
-      .product_description
+      .product_info
         p.product_name Basic Slim Fit T-Shirt
         p.product_price $79.99
     a.hot-products_item.product_card(href='#')
       img.product_pic(src='../pics/main-page_slider/LooseTexturedT-Shirt.png' alt='Loose Textured T-Shirt')
-      .product_description
+      .product_info
         p.product_name Loose Textured T-Shirt
         p.product_price $119.99
     a.hot-products_item.hot-products_item--onsale.product_card(href='#')
-      img.product_pic(src='../pics/main-page_slider/T-ShirtSummerVibes.png' alt='T-Shirt Summer Vibes')
-      .product_description
+      img.product_pic(src='../pics/main-page_slider/TShirtSummerVibes.png' alt='T-Shirt Summer Vibes')
+      .product_info
         p.product_name T-Shirt Summer Vibes
         span.product_price-new $79.99
         span.product_price-old $119.99
     a.hot-products_item.product_card(href='#')
       img.product_pic(src='../pics/main-page_slider/LooseKnit_.png' alt='Loose Knit')
-      .product_description
+      .product_info
         p.product_name Loose Knit 3/4 Sleeve
         p.product_price $119.99
