--- a/src/assets/styles/components/login.scss
+++ b/src/assets/styles/components/login.scss
@@ -70,7 +70,7 @@ hr {
   border: none;
   height: 30px;
 
-  &:before {
+  &::before {
     content: attr(data-divide);
     position: absolute;
     position: absolute;
