--- a/src/assets/styles/components/product.scss
+++ b/src/assets/styles/components/product.scss
@@ -77,7 +77,7 @@
   }
 }
 
-.product_description {
+.product_info {
   margin-top: 20px;
 }
 
@@ -85,8 +85,20 @@
   object-fit: cover;
   object-position: top;
   width: 100%;
-  height: 100%;
+  //height: 100%;
   max-height: 340px;
+
+  &--preview {
+    width: 400px;
+    object-position: top;
+    object-fit: cover;
+    height: 400px;
+  }
+
+  &--preview_aside {
+    max-width: 100px;
+    max-height: 100px;
+  }
   &:focus {
     outline-color: transparent;
   }
@@ -109,16 +121,17 @@
 }
 
 .product_price,
-.product_price-new,
-.product_price-old {
+.product_price--new
+.product_price--old {
   font-size: 20px;
 }
 
-.product_price-new {
+.product_price--new{
   color: var(--c-red);
   margin-right: 10px;
 }
 
-.product_price-old {
+.product_price--old {
   color: var(--c-mediumgray90);
+  text-decoration: line-through;
 }
