--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -18,4 +18,6 @@ body
     .container.aligned
       include ../partials/hot-products.pug
     .container.aligned
+      include ../partials/subscribe.pug
+    .container.aligned
       include ../partials/footer.pug
